# fusion-imu

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yaml  release-plz.yml
examples/: simple.rs
fusion-imu-sys/: Cargo.toml  README.md  build.rs
fusion-imu-sys/src/: lib.rs
src/: ahrs.rs  calibration.rs  flags.rs  internal_states.rs  lib.rs  math.rs  offset.rs  settings.rs
