[workspace]
members = ["fusion-imu-sys"]
resolver = "2"

[package]
name = "fusion-imu"
version = "0.1.1"
edition = "2021"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
description = "Rust wrapper for the Fusion AHRS C library"
categories = ["api-bindings", "algorithms"]
keywords = ["no-std", "ahrs", "imu"]
license = "MIT"
repository = "https://github.com/avsaase/fusion-imu"

[dependencies]
fusion-imu-sys = { version = "0.1.0", path = "./fusion-imu-sys" }
serde = { version = "1.0" , features = ["derive"], optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
plotpy = "1.0.0"

[features]
default = []
serde = ["dep:serde"]
defmt-03 = ["dep:defmt"]
