[package]
name = "fusion-imu-sys"
version = "0.1.0"
edition = "2021"
description = "Generated bindings for the Fusion AHRS C library"
categories = ["external-ffi-bindings", "no_std"]
keywords = ["no-std", "ahrs", "imu"]
license = "MIT"
repository = "https://github.com/avsaase/fusion-imu"

links = "fusion"

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.4", features = ["experimental"] }
cc = "1.0.103"